[project]
name = "enctool"
version = "0.1.0"
description = "Encoding & Hash Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
enctool = "enctool.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["enctool"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]
ignore = ["D100", "D104"]
