[project]
name = "mail-parser"
version = "0.1.0"
description = "A comprehensive MIME email parser"
authors = [
    { name = "Jules", email = "jules@example.com" }
]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
